--- a/static/style.css
+++ b/static/style.css
@@ -7,10 +7,6 @@
     margin-top: 75px;
 }
 
-.card {
-    max-width: 90%;
-}
-
 .mw1200 {
     max-width: 1200px;
 }
@@ -92,4 +88,35 @@
 .card-image {
     max-height: 250px;
     width: auto;
+}
+
+.tracking-image {
+    max-height: 70px;
+}
+
+body {
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#login-body {
+    justify-content: center;
+}
+
+.lk-order-link {
+    text-decoration: none;
+    color: #323232;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    transition: 0.2s;
+}
+
+.lk-order-link:hover {
+    color: #737373;
 }
