Made an utils extension

--- a/static/style.css
+++ b/static/style.css
@@ -26,6 +26,11 @@
     transition: 0.3s;
     margin: 10px;
     padding: 10px;
+    height: 95%;
+}
+
+.row {
+    margin-bottom: 20px;
 }
 
 .catalogue-card:hover {
