--- a/static/style_landing.css
+++ b/static/style_landing.css
@@ -27,7 +27,15 @@
     transition: 0.3s;
     margin: 10px;
     padding: 10px;
-    height: 95%;
+    height: 100%;
+}
+
+#promo-block-content {
+    border: 2px solid #7d655f;
+}
+
+.col-md-4 {
+    margin-bottom: 10px;
 }
 
 .row {
